@startuml
'https://plantuml.com/sequence-diagram

class PlayerRecord {
    - {static}serialVersionUID: long
    - playerName: String
    - difficulty: int
    - recordTime: Date
    - ranking: int
    - score: int
    + PlayerRecord(int difficulty,int score, Date recordTime)
    + getRecordTime(): Date
    + getRanking(): int
    + setRanking(int ranking): void
    + getPlayerName(): String
    + setPlayerName(String playerName): void
    + getScore(): int
    + toString(): String
}
interface RecordDao {
    + doAdd(PlayerRecord record): void
    + getAllRecords(): List<PlayerRecord>
    + doDeleteByRanking(int ranking): void
    + printAll(): void
}
class RecordDaoImpl {
    - playerRecords: List<PlayerRecord>
    + RecordDaoImpl()
    + RecordDaoImpl(int diff)
    + getAllRecords(): List<PlayerRecord>
    + doAdd(PlayerRecord record): void
    + doDeleteByRanking(int ranking): void
    + printAll(): void
    + updateData(): void
    - createFilename():void
    - sortByScore(): void
    - readRecords(): void
    - saveRecords(): void
}

RecordDaoImpl  *-->  PlayerRecord
RecordDao  <|.. RecordDaoImpl

@enduml